manifests/base/rbac.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
