manifests/base/logstash-deployment.yml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: logstash
  name: logstash
spec:
  containers:
    - image: docker.elastic.co/logstash/logstash:8.1.0
      name: logstash
      ports:
        - containerPort: 25826
        - containerPort: 5144
        - containerPort: 5261
        - containerPort: 5561
      resources: {}
      volumeMounts:
        - name: config-volume
          mountPath: /usr/share/logstash/config
        - name: logstash-pipeline-volume
          mountPath: /usr/share/logstash/pipeline
        - name: cert-ca
          mountPath: "/etc/logstash/certificates"
          readOnly: true
  restartPolicy: OnFailure
  volumes:
    - name: config-volume
      configMap:
        name: logstash-configmap
        items:
          - key: logstash.yml
            path: logstash.yml
    - name: logstash-pipeline-volume
      configMap:
        name: logstash-configmap
        items:
          - key: logstash-waf.conf
            path: logstash-waf.conf
          - key: logstash-dos.conf
            path: logstash-dos.conf
    - name: cert-ca
      secret:
        secretName: elasticsearch-es-http-certs-public
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: logstash
  name: logstash
spec:
  ports:
    - name: "25826"
      port: 25826
      targetPort: 25826
    - name: "5144"
      port: 5144
      targetPort: 5144
    - name: "5261"
      port: 5261
      targetPort: 5261
    - name: "5561"
      port: 5561
      targetPort: 5561
  selector:
    app: logstash
status:
  loadBalancer: {}
