manifests/base/nap-dotnetcorewebapp-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nap-dotnetcorewebapp
  labels:
    app: nap-dotnetcorewebapp
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nap-dotnetcorewebapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nap-dotnetcorewebapp
    spec:
      containers:
        - name: nap-dotnetcorewebapp
          image: aknot242.azurecr.io/nap-dotnetcorewebapp
          resources:
            requests:
              cpu: "200m"
          ports:
            - containerPort: 80
              name: proxy
            - containerPort: 8090
              name: probe
            - containerPort: 8091
              name: probe500
          livenessProbe: ###this block performs HTTP liveness probes ####
            httpGet:
              path: /app_protect_dos_liveness
              port: 8090
            initialDelaySeconds: 0 #This is the delay which tells kubelet to wait for 10 seconds before performing the first probe
            periodSeconds: 10 #This field specifies that kubelet should perform a probe every 5 seconds.
          readinessProbe: ####this block performs HTTP readiness probes ###
            httpGet:
              path: /app_protect_dos_readiness
              port: 8090
            initialDelaySeconds: 0
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: nap-dotnetcorewebapp
spec:
  type: ClusterIP
  ports:
    - name: proxy
      port: 80
      protocol: TCP
    - name: probe
      port: 8090
      protocol: TCP
    - name: probe503
      port: 8091
      protocol: TCP
  selector:
    app: nap-dotnetcorewebapp
